# meal_planner

./: Procfile  pyproject.toml
account/: models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_remove_ingredients_ingredient_and_more.py
account/templates/: base.html
accounts/: urls.py  views.py
ingredients/: admin.py  models.py  urls.py  views.py
ingredients/migrations/: 0001_initial.py  0002_ingredient_on_hand.py
inventory/: models.py  urls.py  views.py
meal_planner/: asgi.py  manage.py  models.py  settings.py  urls.py  wsgi.py
meal_planner/account/: urls.py
meal_planner/bulma/: apps.py
meal_planner/meal_planner/: urls.py
meal_planner/templates/: base.html
meals/: admin.py  forms.py  models.py  urls.py  views.py
meals/migrations/: 0001_initial.py  0002_alter_ingredient_name.py  0002_alter_meal_fruit_serving.py  0002_rename_ingredients_mealingredient.py  0003_alter_meal_actual_alter_meal_planned.py  0003_ingredient_uom.py  0004_alter_mealingredient_unique_together.py  0005_alter_mealingredient_recipe.py  0006_alter_ingredient_recipes_alter_meal_recipe_and_more.py  0007_alter_meal_actual_alter_meal_planned.py  0008_rename_mealingredient_recipeingredient.py  0009_remove_ingredient_recipes_recipe_ingredients.py  0010_alter_recipeingredient_options.py  0011_remove_po_meal_meal_po_po_is_complete.py  0012_alter_recipeingredient_serving.py  0013_rename_po_order_rename_po_meal_order.py  0016_alter_ingredient_name.py  (+5 more)
orders/: admin.py  forms.py  models.py  urls.py  views.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
(+50 files in other folders)
